--- a/package.json
+++ b/package.json
@@ -26,6 +26,6 @@
   "dependencies": {
     "deprecated-react-native-prop-types": "^2.3.0",
     "prop-types": "^15.5.10",
-    "react-native-animatable": "^1.3.0"
+    "react-native-reanimated": "~3.17.4"
   }
 }
